external-crates/move/move-compiler/tests/move_2024/typing/dot_call_wrong_type_in_module.move
module 0x42::t {

struct X has drop {}
struct Y has drop { x: X }
struct Z has drop {}

fun g(_self: Z) {}

public fun foo(x: &X) {
    x.g();
}

public fun bar(y: &Y) {
    y.x.g();
}

}
